[gd_scene load_steps=3 format=3 uid="uid://c4jeejt1av0vj"]

[ext_resource type="Script" path="res://interface/something_bar.gd" id="1_urugc"]
[ext_resource type="Texture2D" uid="uid://bv13bxbgy8bc1" path="res://assets/sprites/interface/Health Bar Asset Pack 2 by Adwit Rahman/whitebar.png" id="2_lpwl0"]

[node name="SomethingBar" type="TextureProgressBar"]
offset_right = 216.0
offset_bottom = 40.0
texture_progress_offset = Vector2(16, 0)
script = ExtResource("1_urugc")

[node name="DamageBar" type="TextureProgressBar" parent="."]
z_index = -1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_progress = ExtResource("2_lpwl0")
texture_progress_offset = Vector2(16, 0)

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
